# ToDo_CLI

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.specify/memory/: constitution.md
history/adr/: ADR-1-application-architecture-todo-console-app.md
history/prompts/1-todo-app/: 1-create-todo-app-specification.spec.prompt.md  2-create-todo-app-implementation-plan.plan.prompt.md  3-create-architecture-decision-record.adr.prompt.md  4-create-implementation-tasks.tasks.prompt.md  5-implement-todo-app-features.implementation.prompt.md
history/prompts/constitution/: 1-create-todo-constitution.constitution.prompt.md  20251231-update-constitution-with-user-input.md
history/prompts/todo-intelligent-features/: 20251231-implement-todo-intelligent-features.md  20251231-todo-intelligent-features-spec-and-plan.md
history/prompts/todo-organization/: 20251231-create-todo-organization-spec.md  20251231-generate-todo-organization-tasks.md  20251231-implement-todo-organization-features.md  (+1 more)
specs/001-todo-intelligent-features/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-organization/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/todo_app/: __init__.py  main.py  utils.py
src/todo_app/cli/: interface.py
tests/integration/: test_cli.py  test_intelligent_features_integration.py
tests/unit/: test_intelligent_features.py  test_organization_features.py  test_task.py  test_task_list.py  test_task_service.py
(+12 files in other folders)
